日本人の名字と名前が入れ替わる問題を日本人としての矜持を捨てることで解決

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -18,7 +18,6 @@
 \usepackage{url}
 \usepackage{graphicx}
 \usepackage{float}
-\usepackage{natbib}
 \usepackage{siunitx}
 \usepackage{comment}
 
@@ -86,8 +85,8 @@
 %\renewcommand{\refname}{引用文献}
 \thispagestyle{empty}
 
-\bibliographystyle{unsrt}
 \bibliography{references}
+\bibliographystyle{junsrt}
 
 \newpage
 
