--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -1,43 +1,43 @@
 @inproceedings{weko_20796_1,
-   author	 = "成影,典之 and 高橋,忠幸 and 古川,健人 and 渡辺,伸 and 萩野,浩一 and 三石,郁之 and Glesener,Lindsay and Musset,Sophie and Vievering,Juliana Therese and Courtade,Sasha and Buitrago-Casas,Juan Camilo and Dalton,Gregory and Turin,Paul and Krucker,Sam and Christe,Steven and Ryan,Daniel and Panchapakesan,Athiray and Bongiorno,Stephen and Ramsey,Brian",
-   title	 = "太陽X線集光撮像分光観測ロケット実験FOXSIシリーズ",
-   booktitle	 = "観測ロケットシンポジウム2019 講演集",
-   year 	 = "2019",
-   volume	 = "",
-   number	 = "",
-   publisher	 = "宇宙航空研究開発機構宇宙科学研究所(JAXA)(ISAS)",
-   month	 = "aug"
+    author = {典之,成影 and 忠幸,高橋 and 健人,古川 and 伸,渡辺 and 浩一,萩野 and 郁之,三石 and Glesener,Lindsay and Musset,Sophie and Vievering,Juliana Therese and Courtade,Sasha and Buitrago-Casas,Juan Camilo and Dalton,Gregory and Turin,Paul and Krucker,Sam and Christe,Steven and Ryan,Daniel and Panchapakesan,Athiray and Bongiorno,Stephen and Ramsey,Brian},
+    title	 = {太陽X線集光撮像分光観測ロケット実験FOXSIシリーズ},
+    booktitle	 = {観測ロケットシンポジウム2019 講演集},
+    year 	 = {2019},
+    volume	 = {},
+    number	 = {},
+    publisher	 = {宇宙航空研究開発機構宇宙科学研究所(JAXA)(ISAS)},
+    month	 = {aug}
 }
-@INPROCEEDINGS{2019AGUFMSH31C3315V,
-       author = {{Vievering}, J.~T. and {Glesener}, L. and {Buitrago-Casas}, J.~C. and {Panchapakesan}, S.~A. and {Musset}, S. and {Duncan}, J.~M. and {Narukage}, N. and {Ryan}, D. and {Inglis}, A.~R. and {Takahashi}, T. and {Watanabe}, S. and {Christe}, S. and {Krucker}, S. and {Turin}, P. and {Ramsey}, B.},
-        title = "{FOXSI-4: Instrument Upgrades for a Proposed Fourth Focusing Optics X-Ray Solar Imager Sounding Rocket Experiment}",
-     keywords = {7534 Radio emissions, SOLAR PHYSICS, ASTROPHYSICS, AND ASTRONOMY, 7549 Ultraviolet emissions, SOLAR PHYSICS, ASTROPHYSICS, AND ASTRONOMY, 7554 X-rays, gamma rays, and neutrinos, SOLAR PHYSICS, ASTROPHYSICS, AND ASTRONOMY, 7594 Instruments and techniques, SOLAR PHYSICS, ASTROPHYSICS, AND ASTRONOMY},
+@inproceedings{2019AGUFMSH31C3315V,
+    author = {{Vievering}, J.~T. and {Glesener}, L. and {Buitrago-Casas}, J.~C. and {Panchapakesan}, S.~A. and {Musset}, S. and {Duncan}, J.~M. and {Narukage}, N. and {Ryan}, D. and {Inglis}, A.~R. and {Takahashi}, T. and {Watanabe}, S. and {Christe}, S. and {Krucker}, S. and {Turin}, P. and {Ramsey}, B.},
+    title = "{FOXSI-4: Instrument Upgrades for a Proposed Fourth Focusing Optics X-Ray Solar Imager Sounding Rocket Experiment}",
+    keywords = {7534 Radio emissions, SOLAR PHYSICS, ASTROPHYSICS, AND ASTRONOMY, 7549 Ultraviolet emissions, SOLAR PHYSICS, ASTROPHYSICS, AND ASTRONOMY, 7554 X-rays, gamma rays, and neutrinos, SOLAR PHYSICS, ASTROPHYSICS, AND ASTRONOMY, 7594 Instruments and techniques, SOLAR PHYSICS, ASTROPHYSICS, AND ASTRONOMY},
     booktitle = {AGU Fall Meeting Abstracts},
-         year = {2019},
-       volume = {2019},
-        month = dec,
-          eid = {SH31C-3315},
-        pages = {SH31C-3315},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2019AGUFMSH31C3315V},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+    year = {2019},
+    volume = {2019},
+    month = dec,
+    eid = {SH31C-3315},
+    pages = {SH31C-3315},
+    adsurl = {https://ui.adsabs.harvard.edu/abs/2019AGUFMSH31C3315V},
+    adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 @book{BornWolf:1999:Book,
-  author = {Born, Max and Wolf, Emil},
-  publisher = {Cambridge University Press},
-  year = {1999},
-  added-at = {2009-05-17T11:48:37.000+0200},
-  asin = {0521642221},
-  biburl = {https://www.bibsonomy.org/bibtex/26d133af442b7a40e9771e197b4e0965a/krisrowland},
-  description = {Amazon.com: Principles of Optics: Electromagnetic Theory of Propagation, Interference and Diffraction of Light (7th Edition): Max Born, Emil Wolf: Books},
-  dewey = {535},
-  ean = {9780521642224},
-  edition = {7th},
-  interhash = {72fc3ff76b2bb3a293a5f4cffe818dbe},
-  intrahash = {6d133af442b7a40e9771e197b4e0965a},
-  isbn = {0521642221},
-  keywords = {optics},
-  timestamp = {2009-05-17T11:48:37.000+0200},
-  title = {Principles of Optics: Electromagnetic Theory of Propagation, Interference and Diffraction of Light (7th Edition)},
+    author = {Born, Max and Wolf, Emil},
+    publisher = {Cambridge University Press},
+    year = {1999},
+    added-at = {2009-05-17T11:48:37.000+0200},
+    asin = {0521642221},
+    biburl = {https://www.bibsonomy.org/bibtex/26d133af442b7a40e9771e197b4e0965a/krisrowland},
+    description = {Amazon.com: Principles of Optics: Electromagnetic Theory of Propagation, Interference and Diffraction of Light (7th Edition): Max Born, Emil Wolf: Books},
+    dewey = {535},
+    ean = {9780521642224},
+    edition = {7th},
+    interhash = {72fc3ff76b2bb3a293a5f4cffe818dbe},
+    intrahash = {6d133af442b7a40e9771e197b4e0965a},
+    isbn = {0521642221},
+    keywords = {optics},
+    timestamp = {2009-05-17T11:48:37.000+0200},
+    title = {Principles of Optics: Electromagnetic Theory of Propagation, Interference and Diffraction of Light (7th Edition)},
 }
 @article{Yamada:20,
     author = {Jumpei Yamada and Satoshi Matsuyama and Raita Hirose and Yoshihiro Takeda and Yoshiki Kohmura and Makina Yabashi and Kazuhiko Omote and Tetsuya Ishikawa and Kazuto Yamauchi},
@@ -57,7 +57,6 @@
     author = {Gaskin, Jessica A. and Swartz, Douglas A.},
     year = {2019},
     doi = {10.1117/1.jatis.5.2.021001},
-    file = {:Users/dieu{\_}detruit/Downloads/021001{\_}1.pdf:pdf},
     issn = {2329-4124},
     journal = {Journal of Astronomical Telescopes, Instruments, and Systems},
     number = {02},
@@ -69,7 +68,6 @@
     abstract = {Iterative algorithms for phase retrieval from intensity data are compared to gradient search methods. Both the problem of phase retrieval from two intensity measurements (in electron microscopy or wave front sensing) and the problem of phase retrieval from a single intensity measurement plus a non-negativity constraint (in astronomy) are considered, with emphasis on the latter. It is shown that both the error-reduction algorithm for the problem of a single intensity measurement and the Gerchberg-Saxton algorithm for the problem of two intensity measurements converge. The error-reduction algorithm is also shown to be closely related to the steepest-descent method. Other algorithms, including the input-output algorithm and the conjugate-gradient method, are shown to converge in practice much faster than the error-reduction algorithm. Examples are shown.},
     author = {Fienup, J. R.},
     doi = {10.1364/ao.21.002758},
-    file = {:home/dieu/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Fienup - 1982 - Phase retrieval algorithms a comparison.pdf:pdf},
     issn = {0003-6935},
     journal = {Applied Optics},
     mendeley-groups = {PhaseRetrieval},
@@ -84,7 +82,6 @@
     abstract = {{\textcopyright} 2016 Optical Society of America. Quantitative phase imaging (QPI) utilizes refractive index and thickness variations that lead to optical phase shifts. This gives contrast to images of transparent objects. In quantitative biology, phase images are used to accurately segment cells and calculate properties such as dry mass, volume and proliferation rate. The fidelity of the measured phase shifts is of critical importance in this field. However to date, there has been no standardized method for characterizing the performance of phase imaging systems. Consequently, there is an increasing need for protocols to test the performance of phase imaging systems using well-defined phase calibration and resolution targets. In this work, we present a candidate for a standardized phase resolution target, and measurement protocol for the determination of the transfer of spatial frequencies, and sensitivity of a phase imaging system. The target has been carefully designed to contain well-defined depth variations over a broadband range of spatial frequencies. In order to demonstrate the utility of the target, we measure quantitative phase images on a ptychographic microscope, and compare the measured optical phase shifts with Atomic Force Microscopy (AFM) topography maps and surface profile measurements from coherence scanning interferometry. The results show that ptychography has fully quantitative nanometer sensitivity in optical path differences over a broadband range of spatial frequencies for feature sizes ranging from micrometers to hundreds of micrometers.},
     author = {Godden, T. M. and Mu{\~{n}}iz-Piniella, A. and Claverley, J. D. and Yacoot, A. and Humphry, M. J.},
     doi = {10.1364/oe.24.007679},
-    file = {:home/dieu/Downloads/oe-24-7-7679.pdf:pdf},
     issn = {1094-4087},
     journal = {Optics Express},
     number = {7},
@@ -93,7 +90,7 @@
     volume = {24},
     year = {2016}
 }
-@ARTICLE{1952AnP...445...94W,
+@article{1952AnP...445...94W,
     author = {{Wolter}, Hans},
     title = "{Spiegelsysteme streifenden Einfalls als abbildende Optiken f{\"u}r R{\"o}ntgenstrahlen}",
     journal = {Annalen der Physik},
@@ -110,7 +107,6 @@
     abstract = {{\textcopyright} 2015 SPIE. It is possible to achieve soft X-ray nanofocusing with a high efficiency and no chromatic aberration by using an ultraprecise ellipsoidal mirror. Surface figure metrology is key in the improvement of surface figure accuracy. In this study, we propose a ptychographic phase retrieval method using a visible light laser to measure the surface figure error profile of an ellipsoidal mirror. We introduce a simple experimental system for ptychographic phase retrieval and demonstrate the basic performance of the proposed system. Obtainable wavefront information provides both the figure error and the alignment of the ellipsoidal mirror that yield the best focusing. This developed method is required for offline adjustments when an ellipsoidal mirror is installed in the beamline of synchrotron radiation or X-ray free-electron laser light sources.},
     author = {Takeo, Yoko and Saito, Takahiro and Mimura, Hidekazu},
     doi = {10.1117/12.2188824},
-    file = {:home/dieu/Downloads/95880A.pdf:pdf},
     isbn = {9781628417548},
     issn = {1996756X},
     journal = {Advances in X-Ray/EUV Optics and Components X},
@@ -125,7 +121,6 @@
     abstract = {In this work, issues in phase retrieval in the coherent diffractive imaging (CDI) technique, from discussion on parameters for setting up a CDI experiment to evaluation of the goodness of the final reconstruction, are discussed. The distribution of objects under study by CDI often cannot be cross-validated by another imaging technique. It is therefore important to make sure that the developed CDI procedure delivers an artifact-free object reconstruction. Critical issues that can lead to artifacts are presented and recipes on how to avoid them are provided.},
     author = {Latychevskaia, Tatiana},
     doi = {10.1364/ao.57.007187},
-    file = {:home/dieu/Downloads/ao-57-25-7187.pdf:pdf},
     issn = {23318422},
     journal = {arXiv},
     number = {25},
@@ -138,7 +133,6 @@
     abstract = {The ptychographical iterative engine (PIE) algorithm is examined with both simulated and experimental scanning coherent-diffraction microscopy data. The optimum overlap in terms of image quality, dose on the sample and time of measurements is determined using simulated diffraction data. The validity of the results is supported by experimental helium-neon laser light diffraction data. {\textcopyright} 2007 Elsevier B.V. All rights reserved.},
     author = {Bunk, Oliver and Dierolf, Martin and Kynde, S{\o}ren and Johnson, Ian and Marti, Othmar and Pfeiffer, Franz},
     doi = {10.1016/j.ultramic.2007.08.003},
-    file = {:home/dieu/Downloads/1-s2.0-S0304399107001969-main.pdf:pdf},
     issn = {03043991},
     journal = {Ultramicroscopy},
     keywords = {Diffractive imaging,Lensless imaging,Phase retrieval,Ptychography},
@@ -152,7 +146,6 @@
     abstract = {We demonstrate the use of transverse translation-diverse phase retrieval as a method for the measurement of wavefronts in situations where the detected intensity patterns would be otherwise undersampled. This technique involves using a smaller moving subaperture to produce a number of adequately sampled intensity patterns. The wavefront is then retrieved using an optimization jointly constrained by them. Expressions for the gradient of an error metric with respect to the optimization parameters are given. An experimental arrangement used to measure the transmitted wavefront of a plano-convex singlet using this technique is described. The results of these measurements were repeatable to within approximately lambda/100 RMS.},
     author = {Brady, Gregory R. and Guizar-Sicairos, Manuel and Fienup, James R.},
     doi = {10.1364/oe.17.000624},
-    file = {:home/dieu/Downloads/GRB{\_}OpExp2009{\_}TransDiv.pdf:pdf},
     issn = {1094-4087},
     journal = {Optics Express},
     number = {2},
@@ -164,8 +157,8 @@
 @article{Kume2017,
     abstract = {{\textcopyright} 2017 SPIE. An X-ray ellipsoidal mirror requires nanometer-level shape accuracy for its internal surface. Owing to the difficulty in processing the surface, electroforming using a high precision master mandrel has been applied to mirror fabrication. In order to investigate the replication accuracy of electroforming, a measurement method for the entire internal surface of the mirror must be developed. The purpose of this study is to evaluate the shape replication accuracy of electroforming. In this study, a three-dimensional shape measurement apparatus for an X-ray ellipsoidal mirror is developed. The apparatus is composed of laser probes, a contact probe, reference flats, a z-axis stage, and a rotation table. First, longitudinal profiles of a mandrel or mirror placed vertically on the rotation table are measured at several angular positions. Subsequently, without realignment of the measured sample, circularity at every height is measured at regular intervals of 0.1 mm. During each measurement, the effect of motion errors is calculated and subtracted from each profile by referring to the distances between the probes and reference flats. Combining the circularity data with the longitudinal profiles, a three-dimensional error distribution of the entire surface is obtained. Using a mandrel with nanometer-level shape accuracy and a replicated mirror, the performance of the measurement apparatus and the replication accuracy are evaluated. Measurement repeatability of single-nanometer order and replication accuracy of sub-100-nm order are confirmed.},
     author = {Kume, Takehiro and Takei, Yoshinori and Egawa, Satoru and Yamaguchi, Gota and Motoyama, Hiroto and Mimura, Hidekazu},
+    journal = {Advances in Metrology for X-Ray and EUV Optics VII},
     doi = {10.1117/12.2273666},
-    file = {:home/dieu/Downloads/103850O.pdf:pdf},
     isbn = {9781510612273},
     issn = {1996756X},
     number = {September 2017},
@@ -177,7 +170,6 @@
     abstract = {The long trace profiler (LTP) at SPring-8 has been upgraded to improve stability and resolution of slope measurement. The performances of the upgraded LTP at SPring-8 are presented by cross-checking measurements on a flat mirror with data obtained using Nanometer Optical Component Measuring Machine (NOM) at the Helmholtz Zentrum Berlin / BESSY-II. {\textcopyright} 2009 Elsevier B.V. All rights reserved.},
     author = {Senba, Y. and Kishimoto, H. and Ohashi, H. and Yumoto, H. and Zeschke, T. and Siewert, F. and Goto, S. and Ishikawa, T.},
     doi = {10.1016/j.nima.2009.12.007},
-    file = {:home/dieu/Downloads/1-s2.0-S016890020902302X-main.pdf:pdf},
     issn = {01689002},
     journal = {Nuclear Instruments and Methods in Physics Research, Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
     keywords = {Long trace profiler,Optical metrology,Surface profile measurement,Synchrotron radiation,X-ray mirror},
@@ -193,7 +185,6 @@
     abstract = {We revisited the treatment of the influence of the support conditions and the resulting bending of a scale on the positions of its graduation lines. In contrast to earlier publications, we did not calculate the position deviation with respect to the case without any bending. Due to the production processes used today, this is inappropriate and leads to an overestimation of the related uncertainty contribution. We also extended the treatment from two lines to all lines of the scale and included a finite starting point of the graduation. We verified our analytical model by means of FEM calculations. In addition, we showed that a first order Taylor expansion yields sufficiently accurate results for the position deviations and leads to simple equations for their size. Because line scale measurements are related to the zero line the constant term of the Taylor expansion cancels and the remaining coefficient is identical to the sensitivity coefficient required in the determination of the standard uncertainty contribution. If it is sufficient to suppress the position dependence and to consider only the case where the sample is supported at symmetric positions, then a new, simple equation is obtained for the resulting uncertainty contribution. Finally we showed that due to the position dependence of the deviations the scale coefficient of the scale, which is obtained by a linear fit to the deviations of the line positions of the scale from their nominal values, is also influenced, which has apparently not been noticed up to now. If the line standard used to disseminate the unit of length has not been designed carefully then the resulting change in the scale coefficient exposes a practical limit to the related achievable length-dependent uncertainty contribution. {\textcopyright} 2009 BIPM and IOP Publishing Ltd.},
     author = {K{\"{o}}ning, R. and Przebierala, B. and Weichert, C. and Fl{\"{u}}gge, J. and Bosse, H.},
     doi = {10.1088/0026-1394/46/3/005},
-    file = {:home/dieu/Downloads/K{\"{o}}ning{\_}2009{\_}Metrologia{\_}46{\_}187.pdf:pdf},
     issn = {00261394},
     journal = {Metrologia},
     number = {3},
