とりあえず5章のデータ以外を書いた

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -56,7 +56,7 @@
 %table of figures
 \listoffigures
 %table of tables
-%\listoftables
+\listoftables
 
 % ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ %
 %   Main Body
@@ -72,8 +72,8 @@
 % ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ %
 %   Appendix
 % ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ %
-\appendix
-\input{./appendix/appendix}
+%\appendix
+%\input{./appendix/appendix}
 %\cleardoublepage
 
 % ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ %
