1章の並べ替えをし、プロファイル計測と電鋳加工について書いた

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -20,6 +20,7 @@
 \usepackage{float}
 \usepackage{siunitx}
 \usepackage{comment}
+\usepackage{comment}
 
 %\renewcommand{\figurename}{Fig. }
 %\renewcommand{\tablename}{Table }
