1章をとりあえず書き上げた

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -209,6 +209,7 @@
     issn = {1996756X},
     number = {August 2017},
     pages = {18},
+    journal = {Optical Engineering + Applications},
     title = {{Methods for reducing singly reflected rays on the Wolter-I focusing mirrors of the FOXSI rocket experiment}},
     year = {2017}
 }
@@ -242,11 +243,51 @@
     abstract = {{\textcopyright} 2020 SPIE. Electroforming replication is an essential technique for fabricating full-shell, grazing-incidence mirrors for use in space, laboratories, and synchrotron experiments. For X-ray astronomy, a nickel electroforming replication process was developed and is used to produce lightweight and high-resolution X-ray mirrors. In addition, the electroforming process for fabricating X-ray mirrors for use in synchrotron experiments has undergone remarkable development over the past decade. We expect that the use of the ground-based electroforming replication process for the production of optics for Xray astronomy will lead to further improvements in the performance of X-ray telescopes. This paper describes our ongoing development efforts in the nickel-electroforming replication process, including the results of a pilot study.},
     author = {Yamaguchi, Gota and Kume, Takehiro and Takeo, Yoko and Matsuzawa, Yusuke and Hiraguri, Kentaro and Imamura, Yoichi and Miyashita, Hiroaki and Tamura, Keisuke and Takehara, Yusuke and Takigawa, Ayumu and Kanoh, Tetsuo and Tachibana, Kenji and Mitsuishi, Ikuyuki and Hashizume, Hirokazu and Mimura, Hidekazu},
     doi = {10.1117/12.2569834},
-    file = {:home/dieu/Downloads/114910K.pdf:pdf},
     isbn = {9781510637887},
     issn = {1996756X},
     number = {September 2020},
     pages = {19},
+    journaltitle = {Advances in X-Ray/EUV Optics and Components},
     title = {{Development of precise electroformed Wolter mirror for X-ray astronomy}},
     year = {2020}
+}
+@article{Liu_2004,
+	doi = {10.1086/423371},
+	url = {https://doi.org/10.1086/423371},
+	year = 2004,
+	month = {jul},
+	publisher = {American Astronomical Society},
+	volume = {611},
+	number = {1},
+	pages = {L53--L56},
+	author = {Wei Liu and Yan Wei Jiang and Siming Liu and Vah{\'{e}} Petrosian},
+	title = {{RHESSI} Observations of a Simple Large X-Ray Flare on 2003 November 3},
+	journal = {The Astrophysical Journal},
+	abstract = {We present data analysis and interpretation of a simple X-class flare observed with RHESSI on 2003 November 3. In contrast to other X-class flares observed previously, this flare shows a very simple morphology with well-defined looptop (LT) and footpoint (FP) sources. The almost monotonic upward motion of the LT source and increase in separation of the two FP sources are consistent with magnetic reconnection models proposed for solar flares. In addition, we find that the source motions are relatively slower during the more active phases of hard X-ray emission; the emission centroid of the LT source shifts toward higher altitudes with the increase of energy; and the separation between the LT emission centroids at two different photon energies is anticorrelated with the FP flux. Nonuniformity of the reconnecting magnetic fields could be a possible explanation of these features.}
+}
+@article{VanSpeybroeck1972,
+    abstract = {We have evaluated the principal optical characteristics of paraboloid-hyperboloid x-ray telescopes by a ray-tracing procedure; we find that our results for resolution, focal plane curvature, and finite source distance effects may be approximated in terms of the design parameters by simple empirical formulas.},
+    author = {VanSpeybroeck, L. P. and Chase, R. C.},
+    doi = {10.1364/ao.11.000440},
+    file = {:home/dieu/Downloads/ao-11-2-440.pdf:pdf},
+    issn = {0003-6935},
+    journal = {Applied Optics},
+    number = {2},
+    pages = {440},
+    title = {{Design Parameters of Paraboloid-Hyperboloid Telescopes for X-ray Astronomy}},
+    volume = {11},
+    year = {1972}
+}
+@article{Neal2002,
+    abstract = {The design of a wavefront sensor may be determined by the lenslet array and camera selection. There are numerous different applications for these sensors, requiring widely differing dynamic range and accuracy. Performance metrics are needed to evaluate candidate designs and to compare results. We have developed a standard methodology for measuring the repeatability, accuracy and dynamic range of different wavefront sensor designs, and have experimentally applied these metrics to a number of different sensors.},
+    author = {Neal, Daniel R. and Copland, James and Neal, David A.},
+    doi = {10.1117/12.450850},
+    issn = {0277786X},
+    journal = {Advanced Characterization Techniques for Optical, Semiconductor, and Data Storage Components},
+    keywords = {aberrometer,adaptive optics,error analysis,hartmann sensor,hartmann-shack,interferometer,shack-hartmann,wavefront sensing,wavefront sensor},
+    number = {November 2002},
+    pages = {148},
+    title = {{Shack-Hartmann wavefront sensor precision and accuracy}},
+    volume = {4779},
+    year = {2002}
 }
