--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -95,7 +95,7 @@
 %  Acknowledgements
 % ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ %
 \input{./acknowledgements/acknowledgements}
-\addcontentsline{toc}{chapter}{謝辞} %   /* add acknowledgement to the table of contents */
+% \addcontentsline{toc}{chapter}{謝辞} %   /* add acknowledgement to the table of contents */
 
 % End of Document
 \end{document}
