--- a/thesis/acknowledgements/acknowledgements.tex
+++ b/thesis/acknowledgements/acknowledgements.tex
@@ -1,22 +1,38 @@
 \chapter*{謝辞}
-\if0
+
+卒業論文を執筆するにあたり、1年間指導して頂いた三村秀和准教授に深い感謝の意を示します。
+COVID-19の影響もあり例年とは異なる状況の中で、様々なことに配慮しながら私の進行状況を見守り、導いて下さいました。
+非常に充実した研究生活を送ることができたのは、ひとえに先生が環境づくりに努めて下さっているからです。
+本当にありがとうございました。
+国枝正典教授には、合同研究会での鋭い指摘を頂き、また実験に際して追加工が必要な際には重要な助言をして下さいました。
+深く御礼申し上げます。
+木村先生には、他愛も無いものから技術的に重要なことまで様々な質問に対して適切な応対をして頂き、作業が滞った際には非常に有効的な助言を頂きました。
+オフラインでの研究活動が遅れた私が楽しく研究室に馴染むことが出来たのは先生のおかげです。
+ありがとうございました。
+技術専門職員の齋さんには、実験装置に必要な部品の追加工を快く引き受けて頂き、おかげでスムーズに計測実験を行うことが出来ました。
+深く感謝致します。
+
+上級生として指導に当たって下さった竹尾さん、島村さんはどんなに些細な質問でも優しく親身になって答えてくださり、右も左も分からなかった私に本当に多くのことを教えて下さいました。
+山口さんには、ミラーの設計やX線天文学について非常に多くのことを教わりました。
+その他大勢の先輩方も、新しく入ってきた私を優しく迎え入れ、充実した研究室生活をサポートして下さいました。
+
+一筋縄では行かず、苦労の多い一年ではありましたが、多くの方々の支えがあって無事卒業研究を終えることが出来ました。
+本当に感謝の念が耐えません。
+
+最後になりますが、これまで私を支え育ててくれた両親、また私を励ましてくれたすべての友人に感謝し、卒業論文の結びと致します。
+
 \markboth{謝辞}{}
 \label{thankyou}
-\fi
 
 \lhead[謝辞]{}
 \thispagestyle{empty}
 
 \newpage
 
-\if0
-感謝
-
-
 \begin{flushright}
-2021年2月 渡辺 貴史
+2021年1月20日 渡辺 貴史
 \end{flushright}
-\fi
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
