--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -20,7 +20,6 @@
 \usepackage{float}
 \usepackage{siunitx}
 \usepackage{comment}
-\usepackage{comment}
 
 %\renewcommand{\figurename}{Fig. }
 %\renewcommand{\tablename}{Table }
@@ -36,8 +35,8 @@
 %   論文の表紙の項目
 % ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ %
 \thesistype{令和2年度 卒業論文}
-\title{タイコグラフィによる回転体X線結像ミラーの \vspace{2mm}\\ キャラクタリゼーション}
-\etitle{Characterization of Rotation X-ray Imaging Mirror \vspace{2mm}\\ Using Ptychography}
+\title{タイコグラフィ法による \vspace{2mm} \\ 大型X線ウォルターミラーの光学的評価}
+\etitle{Wave-optical evaluation of large-scale Wolter X-ray mirrors \vspace{2mm} \\ by ptychography measurement}
 \affiliation{東京大学 工学部 精密工学科}
 \supervisor{三村 秀和 准教授}
 \studentid{03-190395}
