--- a/abstpaper/main.tex
+++ b/abstpaper/main.tex
@@ -60,6 +60,7 @@ FOXSI4に搭載予定のWolter I型のミラーについて、秒角分解能の
 2023年に打ち上げ予定のFOXSI4プロジェクトでは、太陽コロナの活発な領域において高温プラズマが発するX線領域の電磁波を計測することで、これらを明らかにすることを1つの目標としている。
 FOXSI4に搭載予定のWolter I型のミラーについて、解像分解能の向上のためには加工プロセスの改善が必要であり、結像性能の悪化要因を特定できる測定装置が必要である。
 測定装置は、ミラー内面を傷つけない非接触式であり、かつ素早く加工プロセスにフィードバックできる簡素なものが好ましい。
+また、受光面積を大きくするため複数枚のWolterミラーをネスト構造にしたNested Wolterミラーに対しても適用可能な系であることが求められる。
 これを満たす計測法として波面計測法があり、中でも特にWolterミラーの非常に細い輪帯を測定できる高分解能な測定が可能である位相回復法を採用する。
 
 口径が大きく射入射角の小さいWolterミラーはNAがやや低く、計測するべき波面は図\ref{fig:wolter_thinring}に示すように非常に細い輪帯状になる。
@@ -76,17 +77,16 @@ FOXSI4に搭載予定のWolter I型のミラーについて、解像分解能の
 \section{手法の検討}
 
 位相回復法とは、測定対象のミラーによって集光されたビームに位相物体を差し入れ、背後に現れる回折像の強度分布計測値から繰り返し計算によって位相情報を算出する方法である。
-この手法の背景には、集光ビームの波動場の伝播がフーリエ変換の関係で与えられるという物理的法則がある。
-伝播先の光波動場は元の波動場の空間周波数領域での表現になっており、これを広範囲に渡って測定することはもとの波面の小さな周期の情報を得ることに対応する。
 素子の最小サイズによる律速がないため、測定する際の配置を工夫することで非常に高い空間分解能が実現できる。
 位相回復法の系として幾つかの種類が考えられる。
-
+焦点面でオブジェクトを走査する方法では、ミラー下流端面における空間分解能を十分確保するために必要な走査回数が数千回となってしまい、計測時間として現実的ではない。
 
 \subsection{下流端開口走査による冗長性}
 \label{chap3_transverse_introduction}
 
 オブジェクトを走査する位置を焦点面ではなく集光素子の開口直後とするTransverse Translation法がBradyらによって提案されている。\cite{Brady2009}
-これは図\ref{fig:transverse_schematic}に示すように、焦点面を操作するタイコグラフィ法同様にオブジェクトを集光素子の開口で走査し、その回折像を下流側のカメラで撮影するという方法である。
+これは図\ref{fig:transverse_schematic}に示すように、焦点面を操作するタイコグラフィ法同様に穴の空いたピンホールオブジェクトを集光素子の開口で走査し、その回折像を下流側のカメラで撮影するという方法である。
+この方法は、焦点面において1枚だけ強度分布を取得し位相回復計算を行う場合に比べ、ピンホールによりNAが低下し、メインピークが下がるためダイナミックレンジの観点から有利である。
 
 \begin{figure}[!ht]
 \centering
@@ -102,7 +102,7 @@ FOXSI4に搭載予定のWolter I型のミラーについて、解像分解能の
 \label{fig:transverse_schematic}
 \end{figure}
 
-ビームの対称性から、ピンホールが1つでは位相回復計算が収束しない。
+しかし、ビームの対称性から、ピンホールが1つでは位相回復計算が収束しない。
 これを解決するため、穴を3つ不等間隔で開けたオブジェクトを用いて走査する方法を提案する。
 シミュレーションの検討により、不等間隔の3つ穴を持つピンホールオブジェクトによる位相回復計算が収束することを確認した。
 
@@ -140,9 +140,9 @@ FOXSI4に搭載予定のWolter I型のミラーについて、解像分解能の
 
 非点収差成分は周方向誤差に換算すると\SI{101.5}{\micro \metre}となった。
 これは真円度測定データと矛盾するため、ミラーではなく上流の光学系による非点収差が原因ではないかと考えた。
-ミラーを回転させ
-
-\section{ミラー計測実験}
+ミラーを光軸方向周りに回転させたところ、焦点面における非点収差由来の模様は回転せず、その場に留まった。
+このことから、ミラーではなく上流光学系由来の非点収差であると結論づけた。
+理想的なレンズを用いた実験によって上流光学系を校正した上で、再度実験を行うことで、ミラーに起因する波面誤差が計測できると考えられる。
 
 \bibliography{references}
 \bibliographystyle{siam}
