--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -21,6 +21,7 @@
 \usepackage{siunitx}
 \usepackage{comment}
 
+
 %\renewcommand{\figurename}{Fig. }
 %\renewcommand{\tablename}{Table }
 \newcommand{\argmax}{\mathop{\rm arg~max}\limits}
@@ -63,7 +64,7 @@
 % ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ %
 \mainmatter
 \input{./chap1/chap1}
-%\input{./chap2/chap2}
+\input{./chap2/chap2}
 \input{./chap3/chap3}
 %\input{./chap4/chap4}
 \input{./chap5/chap5}
