--- a/abstpaper/main.tex
+++ b/abstpaper/main.tex
@@ -33,7 +33,7 @@
 	{\Large タイコグラフィ法による大型X線ウォルターミラーの光学的評価}
 \end{center}
 \begin{center}
-	{\Large Large }
+	{\Large Wave-optical evaluation of large-scale Wolter X-ray mirrors by ptychography measurement}
 \end{center}
 
 \begin{flushright}
