--- a/error_response/oval/analysis.ipynb
+++ b/error_response/oval/analysis.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "sunset-territory",
+   "execution_count": 1,
+   "id": "dynamic-rehabilitation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,8 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "id": "disturbed-priest",
+   "execution_count": 2,
+   "id": "square-enforcement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,8 +26,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "id": "initial-mainstream",
+   "execution_count": 3,
+   "id": "freelance-spring",
    "metadata": {},
    "outputs": [
     {
@@ -60,8 +60,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "id": "secure-collins",
+   "execution_count": 4,
+   "id": "decent-analysis",
    "metadata": {},
    "outputs": [
     {
@@ -81,8 +81,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
-   "id": "owned-suspension",
+   "execution_count": 5,
+   "id": "sharp-focus",
    "metadata": {},
    "outputs": [
     {
@@ -137,8 +137,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
-   "id": "automatic-establishment",
+   "execution_count": 6,
+   "id": "surprised-cleanup",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,8 +148,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
-   "id": "neural-scheme",
+   "execution_count": 7,
+   "id": "configured-mechanics",
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,8 @@
     }
    ],
    "source": [
-    "hpd_arcsecond = hpd / 2.1025 / math.pi * 180 * 3600\n",
+    "#hpd_arcsecond = hpd / 2.1025 / math.pi * 180 * 3600\n",
+    "hpd_arcsecond = hpd\n",
     "\n",
     "fig = plt.figure(figsize=(10, 5))\n",
     "\n",
@@ -183,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "minus-chair",
+   "id": "alone-tractor",
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "turkish-discrimination",
+   "id": "radio-mystery",
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "generic-navigator",
+   "id": "broke-commissioner",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "natural-council",
+   "id": "quality-words",
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "id": "pointed-pizza",
+   "id": "south-distribution",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "id": "powered-western",
+   "id": "rotary-legislature",
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "brown-austria",
+   "id": "healthy-retail",
    "metadata": {},
    "outputs": [],
    "source": []
